fixed horizontal scroll

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -31,6 +31,7 @@
 }
 
 .body {
+  width: 100%;
   scroll-behavior: smooth;
 }
 .textColorWhite {
