--- a/src/styles/layout/Header/Landing/Landing.scss
+++ b/src/styles/layout/Header/Landing/Landing.scss
@@ -1,5 +1,6 @@
 .container {
   height: 105vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
