--- a/src/styles/layout/Main/AboutMe.scss
+++ b/src/styles/layout/Main/AboutMe.scss
@@ -1,4 +1,5 @@
 .aboutMe {
+  overflow: hidden;
   padding: 20px;
   @include desktop {
     padding-left: 10%;
