--- a/src/styles/layout/Main/Selected-works.scss
+++ b/src/styles/layout/Main/Selected-works.scss
@@ -1,5 +1,7 @@
 .selectedWorks {
+  overflow: hidden;
   padding: 20px;
+  width: 100%;
   @include desktop {
     padding-left: 10%;
     padding-right: 10%;
